adjusted home page and main overflow to fix menu from coming up and showing whitespace at weird sizes

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -85,7 +85,7 @@ body {
 .heading-secondary {
   font-size: 2.8rem;
   font-weight: 600;
-  line-height: 4rem;
+  line-height: 3rem;
   color: #404756;
 }
 
@@ -1039,6 +1039,7 @@ textarea {
   background-color: #fff;
   padding: 20px 10px;
   height: 100%;
+  overflow-x: scroll;
 }
 
 .footer {
@@ -1531,30 +1532,35 @@ textarea {
   align-items: center;
 }
 .home__img {
-  height: 25rem;
+  height: 30rem;
   opacity: 0.75;
 }
-@media (max-height: 46em) and (max-width: 33.75em) {
-  .home__img {
-    height: 25rem;
-  }
-}
-@media (max-height: 35.5em) {
-  .home__img {
-    height: 16rem;
-  }
-}
-@media (min-width: 43.75em) {
-  .home__img {
-    height: 25rem;
-  }
-}
-@media (min-width: 43.75em) and (max-height: 42em) {
+@media (min-width: 37.5em) and (max-width: 43.75em) {
   .home__img {
     height: 18rem;
   }
 }
+@media (min-width: 43.75em) {
+  .home__img {
+    height: 30rem;
+  }
+}
+@media (min-width: 43.75em) and (max-height: 42em) {
+  .home__img {
+    height: 16rem;
+  }
+}
+@media (min-width: 56.25em) and (max-width: 75em) {
+  .home__img {
+    height: 20rem;
+  }
+}
 @media (min-width: 75em) and (max-width: 112.5em) {
+  .home__img {
+    height: 22rem;
+  }
+}
+@media (min-width: 56.25em) and (max-width: 75em) and (min-height: 75em) {
   .home__img {
     height: 40rem;
   }
@@ -1563,41 +1569,41 @@ textarea {
 .home .heading-secondary {
   text-align: center;
   padding: 0 1rem;
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 @media (min-width: 37.5em) and (max-width: 43.75em) {
   .home .text,
 .home .heading-secondary {
     width: 75%;
-    font-size: 2.5rem;
+    font-size: 1.6rem;
   }
 }
 @media (min-width: 43.75em) {
   .home .text,
 .home .heading-secondary {
     width: 75%;
-    font-size: 2.5rem;
-  }
-}
-@media (min-width: 43.75em) {
-  .home .text,
-.home .heading-secondary {
-    width: 75%;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
   }
 }
 @media (min-width: 56.25em) and (max-width: 75em) {
   .home .text,
 .home .heading-secondary {
     width: 75%;
-    font-size: 4rem;
+    font-size: 1.6rem;
   }
 }
 @media (min-width: 75em) and (max-width: 112.5em) {
   .home .text,
 .home .heading-secondary {
     width: 75%;
-    font-size: 4rem;
+    font-size: 2rem;
+  }
+}
+@media (min-width: 56.25em) and (max-width: 75em) and (min-height: 75em) {
+  .home .text,
+.home .heading-secondary {
+    width: 75%;
+    font-size: 3rem;
   }
 }
 
