--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -12,7 +12,7 @@ body {
 .heading-secondary {
   font-size: 2.8rem;
   font-weight: 600;
-  line-height: 4rem;
+  line-height: 3rem;
   color: a.$color-dark-grey;
 }
 .heading-tertiary {
