--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -3,4 +3,5 @@
   background-color: a.$color-white;
   padding: a.$main-padding;
   height: 100%;
+  overflow-x: scroll;
 }
