--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -8,23 +8,26 @@
   align-items: center;
 
   &__img {
-    height: 25rem;
+    height: 30rem;
     opacity: 0.75;
 
-    @include a.respond(iphone6) {
-      height: 25rem;
-    }
-    @include a.respond(iphone5) {
-      height: 16rem;
-    }
-    @include a.respond(sevenhundred) {
-      height: 23rem;
-    }
-    @include a.respond(sevenhundredshort) {
+    @include a.respond(weirdzone) {
       height: 18rem;
     }
+    @include a.respond(sevenhundred) {
+      height: 30rem;
+    }
+    @include a.respond(sevenhundredshort) {
+      height: 16rem;
+    }
 
+    @include a.respond(laptop) {
+      height: 20rem;
+    }
     @include a.respond(desktop) {
+      height: 22rem;
+    }
+    @include a.respond(ipadpro) {
       height: 40rem;
     }
   }
@@ -32,10 +35,10 @@
   .heading-secondary {
     text-align: center;
     padding: 0 1rem;
-    font-size: 2rem;
+    font-size: 2.5rem;
     @include a.respond(weirdzone) {
       width: 75%;
-      font-size: 2.2rem;
+      font-size: 1.6rem;
     }
     @include a.respond(sevenhundred) {
       width: 75%;
@@ -43,9 +46,13 @@
     }
     @include a.respond(laptop) {
       width: 75%;
-      font-size: 3rem;
+      font-size: 1.6rem;
     }
     @include a.respond(desktop) {
+      width: 75%;
+      font-size: 2rem;
+    }
+    @include a.respond(ipadpro) {
       width: 75%;
       font-size: 3rem;
     }
